<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navigation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="places_button">My Places</string>
    <string name="title_activity_directions">Directions</string>
    <string name="title_activity_bt_console">BtConsoleActivity</string>
    <string name="finch_video_app_name">Finch Video</string>
    <string name="finch_video_update_content">Update Content</string>
    <string name="finch_video_search">Search Videos</string>
    <string name="checkbox_app_name">Checkbox App</string>

    <dimen name="finch_video_padding">2px</dimen>

    <string-array name="finchwelcomemenustrings">
        <item>"Preferences"</item>
    </string-array>

    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="bluetooth_tools">Bluetooth tools</string>
    <string name="lifecycle_explorer">Lifecycle explorer</string>
    <string name="animation_example">Animation</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Bluetooth errors -->
    <string name="bt_connection_lost">Connection lost</string>
    <string name="bt_unable">Unable to connect</string>
    <string name="title_activity_device_list">DeviceListActivity</string>

    <color name="green">#1abc9c</color>
    <color name="background">#86E2D5</color>

    <string name="title_activity_send_directions">SendDirections</string>
    <string name="title_activity_try_bluetooth">TryBluetooth</string>
    <string name="title_activity_my_places">MyPlaces</string>
    <string name="placesTitle">My Places</string>

    <string-array name="menu">
        <item>Edit</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>

    <string name="nav_menu_string">Navigation Menu</string>
    <string name="give_name">Enter the location name:</string>
    <string name="give_address">Enter location address:</string>
    <string name="give_lon">Enter location\'s longitude:</string>
    <string name="give_lat">Enter location\'s latitude:</string>
    <string name="sample_name">ex: Home</string>
    <string name="sample_address">ex: 123 Main St.</string>
    <string name="sample_lat">ex: -45.354684</string>
    <string name="sample_lon">ex: 75.864915</string>
    <string name="add_button">Add Place</string>
    <string name="title_activity_edit_place">EditPlace</string>
    <string name="edit_button">Update Place</string>
    <string name="title_activity_add_my_place">AddMyPlace</string>
    <string name="location_updated_message">Location Updated!!</string>

    <string name="my_places">My Places</string>
    <string name="add_name">Enter the location name: </string>
    <string name="add_sample_name">ex: Home</string>
    <string name="add_address">Enter location address: </string>
    <string name="add_sample_address">ex: 123 Main St.</string>
    <string name="add_category">Pick a location category : </string>
    <string-array name="pic_categories">
        <item>None</item>
        <item>Home</item>
        <item>Nature</item>
        <item>Work</item>
        <item>Entertainment</item>
        <item>Bank</item>
        <item>Restaurant</item>
        <item>Grocery</item>
        <item>Mall</item>
        <item>Dentist</item>
        <item>Doctor</item>
        <item>Friend</item>
    </string-array>
    <string name="add_suggestion">Suggest Coordinates</string>
    <string name="add_lat">Enter location\'s latitude</string>
    <string name="add_sample_lat">Ex: -45.354684</string>
    <string name="add_lng">Enter location\'s longitude</string>
    <string name="add_sample_lng">Ex: 75.864915</string>
    <string name="place_category">Pick a location category :</string>
    <string name="title_activity_favourite_places">FavouritePlaces</string>
    <string name="title_activity_nav_example">NavExample</string>
    <string name="destination">Destination : </string>
    <string name="currentlocation">Current Location : </string>
    <string name="distanceTitle">Distance to next step : </string>


</resources>
