<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vanessamacisaac.navigation.EditPlace">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_name"
        android:textSize="18sp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_sample_name"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/edit_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/place_category"/>
    <Spinner
        android:id="@+id/pic_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_address"
        android:textSize="18sp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_sample_address"
        android:textSize="18sp"
        android:padding="5dp"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_suggestion"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lat"
        android:textSize="18sp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_lat"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lng"
        android:textSize="18sp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edit_lon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_sample_lng"
        android:padding="5dp"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:textSize="18sp"
        android:onClick="formValidate"
        />

</LinearLayout>
