<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vanessamacisaac.navigation.AddMyPlace">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_name"
        android:textSize="18sp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_name"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/add_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/place_category"/>

    <Spinner
        android:id="@+id/pic_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_address"
        android:textSize="18sp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_address"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <Button
        android:paddingTop="5dp"
        android:onClick="suggestCoors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_suggestion"/>

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_lat"
        android:textSize="18sp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/add_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_lat"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_lon"
        android:textSize="18sp"
        android:padding="5dp" />

    <EditText
        android:id="@+id/add_lon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_lon"
        android:textSize="18sp"
        android:padding="5dp"
        android:paddingBottom="10dp"
        />

    <Button
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:padding="5dp"
        android:onClick="formValidate"
        />

</LinearLayout>
